--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustResize"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,11 +25,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".DisplayDataActivity" />
+
         <service
             android:name=".WriteDocService"
             android:exported="false" />
 
-        <activity android:name=".InitDataActivity"></activity>
+        <activity android:name=".InitDataActivity" />
+        <activity android:name=".DisplayDiabetesDataActivity"></activity>
     </application>
 
 </manifest>
