--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,17 +8,14 @@
 
      <application
         android:allowBackup="true"
-        android:configChanges="locale"
         android:icon="@drawable/diabetes"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
- /*           android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,7 +28,8 @@
             android:name=".WriteDocService"
             android:exported="false" />
 
-        <activity android:name=".InitDataActivity" />
+        <activity android:name=".InitDataActivity"
+            android:windowSoftInputMode="stateHidden"/>
         <activity android:name=".DisplayDiabetesDataActivity"></activity>
     </application>
 
