--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-     <application
+    <application
         android:allowBackup="true"
         android:icon="@drawable/diabetes"
         android:label="@string/app_name"
         android:supportsRtl="true"
-         android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -28,9 +28,16 @@
             android:name=".WriteDocService"
             android:exported="false" />
 
-        <activity android:name=".InitDataActivity"
-            android:windowSoftInputMode="stateHidden"/>
-        <activity android:name=".DisplayDiabetesDataActivity"></activity>
+        <activity
+            android:name=".InitDataActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".DisplayDiabetesDataActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".DiabetesGraphActivity"
+            android:label="@string/title_activity_diabetes_graph"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
