--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,10 @@ android {
         }
     }
 }
+repositories {
+    mavenCentral()
+}
+
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -33,4 +37,5 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
     testCompile 'junit:junit:4.12'
     compile files('libs/itextg-5.5.10.jar')
+    compile 'com.github.paolorotolo:appintro:4.1.0'
 }
